cabal-version:       >=1.10

name:                builder
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              John C. Lavelle
copyright:           2019
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Build.MVarModel
                     , Build
  build-depends:       base >=4.12 && <4.13
                     , free
                     , tagged
                     , mtl
                     , transformers
                     , algebraic-graphs
                     , containers
  hs-source-dirs:      src
  default-language:    Haskell2010

executable builder
  main-is:             Main.hs
  build-depends:       base >=4.12 && <4.13, builder
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite builder-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base >=4.12 && <4.13
